# master_thesis

./: README.md
llm/: .gitignore  pyproject.toml  req.mac.txt  req.txt
llm/docs/: Equipment-Rental-Agreement.txt  Family-Member-Lease-Agreement.txt  Hunting-Lease-Agreement-Template.txt  One-1-Page-Residential-Lease-Agreement.txt  Short-Term-Vacation-Lease-Agreement.txt  Standard-Residential-Lease-Agreement-Form.txt  Storage-Space-Lease-Agreement.txt  Sublease-Agreement.txt  chatgpt-inference.txt  condominium-lease-agreement-template.txt  contract_prompt.txt  lease-to-own-option-to-purchase-agreement.txt  month-to-month-lease-agreement-template.txt  parking-space-rental-agreement-template.txt  rentals.txt  roommate-agreement-template.txt  t0-inference.txt  week-to-week-lease-agreement-form.txt
llm/llm/: constants.py  contract_generator.py  document_processor.py  llm.ipynb  main.ipynb  main.py  rag.py  rag_pipeline.py  test_generator.py
llm/templates/: base_rental.sol  base_sale.sol  base_service.sol  template_fees.sol  template_fees.txt  template_guests.sol  template_guests.txt  template_lease_term.sol  template_lease_term.txt  template_lease_term_fixed.sol  template_lease_term_fixed.txt  template_lease_term_month_to_month.sol  template_lease_term_month_to_month.txt  template_move_in_inspection.sol  template_move_in_inspection.txt  template_move_in_inspection_inspect.sol  template_move_in_inspection_inspect.txt  template_move_in_inspection_no_inspection.sol  template_move_in_inspection_no_inspection.txt  template_no_guests.sol  template_no_guests.txt  template_no_security_deposit.sol  template_no_security_deposit.txt  template_parking.sol  template_parking.txt  template_parking_no_parking.sol  template_parking_no_parking.txt  template_parking_provide_parking.sol  template_parking_provide_parking.txt  template_parties.sol  (+41 more)
recognition/: pyproject.toml
(+42 files in other folders)
