[project]
name = "llm"
version = "0.1.0"
description = ""
authors = [
    {name = "Danila Moriakov",email = "d.moriakov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "transformers (>=4.49.0,<5.0.0)",
    "huggingface-hub (>=0.29.3,<0.30.0)",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "notebook (>=7.3.3,<8.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "llama-cpp-python (>=0.3.8,<0.4.0)",
    "ctransformers[mps] (>=0.2.27,<0.3.0)",
    "langchain (>=0.1.0,<0.2.0)",
    "sentence-transformers (>=2.2.2,<3.0.0)",
    "pypandoc (>=1.15,<2.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
