[project]
name = "recognition"
version = "0.1.0"
description = ""
authors = [
    {name = "Danila Moriakov",email = "d.moriakov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "spacy (>=3.8.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "recognition.main:main"
